--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "dev": "DOTENV_PATH=./environments/.env.local ts-node-dev --respawn --transpileOnly ./src/app.ts",
-    "prod": "tsc && node dist/app.js"
+    "prod": "tsc && node dist/app.js",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
