--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.17.2",
     "@types/express-jwt": "0.0.42",
+    "@types/mongodb": "^3.3.13",
     "@types/node": "^12.12.21",
     "@types/request": "^2.48.4",
     "body-parser": "^1.19.0",
@@ -31,6 +32,8 @@
     "morgan": "^1.9.1",
     "path": "^0.12.7",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.4",
+    "winston": "^3.2.1",
+    "winston-mongodb": "^5.0.1"
   }
 }
