--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,11 @@ AWS_SMS_PASS=
 AWS_SMS_FROM=
 AWS_SMS_TO=
 AWS_SMS_SUBJECT=
+
+# Winston MongoDb Logger
+LOGGING_MONGODB_CONNECTION_STRING=
+LOGGING_MONGODB_COLLECTION=
+LOGGING_CAPPED=true
+LOGGING_CAP_COUNT=
+LOGGING_MIN_LEVEL_MONGODB_LOGGED=
+LOGGING_MIN_LEVEL_CONSOLE_LOGGED=
