--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,9 @@ typings/
 .next
 
 # Environment
-environments/
+environments/.env.local
+environments/.env.prod
+environments/.env.qa
 
 # IDE
 .idea/
