--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ AWS_SMS_SUBJECT=
 
 # Winston MongoDb Logger
 LOGGING_MONGODB_CONNECTION_STRING=
+LOGGING_MONGODB_DB=
 LOGGING_MONGODB_COLLECTION=
 LOGGING_CAPPED=true
 LOGGING_CAP_COUNT=
