--- a/environments/.env.qa.example
+++ b/environments/.env.qa.example
@@ -27,6 +27,7 @@ AWS_SMS_SUBJECT=Contact Us
 
 # Winston MongoDb Logger
 LOGGING_MONGODB_CONNECTION_STRING=
+LOGGING_MONGODB_DB=
 LOGGING_MONGODB_COLLECTION=opstack-logging
 LOGGING_CAPPED=true
 LOGGING_CAP_COUNT=1000
