--- a/package.json
+++ b/package.json
@@ -8,32 +8,36 @@
     "tsc": "tsc",
     "dev": "DOTENV_PATH=./environments/.env.local ts-node-dev --respawn --transpileOnly ./src/app.ts",
     "prod": "tsc && node dist/app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "bp-prod": "npm run tsc && docker build -t opinionatedstack/rest-ts-node:latest -f Dockerfile.prod . && docker push opinionatedstack/rest-ts-node:latest && say prod rest done",
+    "bp-qa": "npm run tsc && docker build -t opinionatedstack/rest-ts-node:latest-qa -f Dockerfile.qa . && docker push opinionatedstack/rest-ts-node:latest-qa && say qa rest done"
+
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.8",
     "@types/express-jwt": "0.0.42",
-    "@types/mongodb": "^3.3.16",
-    "@types/node": "^12.12.27",
-    "@types/request": "^2.48.4",
+    "@types/mongodb": "^3.5.27",
+    "@types/node": "^12.12.58",
+    "@types/request": "^2.48.5",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
-    "express-jwt": "^5.3.1",
-    "express-jwt-authz": "^2.3.1",
-    "helmet": "^3.21.2",
-    "http-errors": "^1.7.3",
-    "jwks-rsa": "^1.6.2",
-    "morgan": "^1.9.1",
+    "express-jwt": "^5.3.3",
+    "express-jwt-authz": "^2.4.1",
+    "helmet": "^3.23.3",
+    "http-errors": "^1.8.0",
+    "jwks-rsa": "^1.9.0",
+    "morgan": "^1.10.0",
     "path": "^0.12.7",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.5",
-    "winston": "^3.2.1",
-    "winston-mongodb": "^5.0.1"
+    "request": "^2.88.2",
+    "ts-node-dev": "^1.0.0-pre.62",
+    "typescript": "^3.9.7",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.4"
   }
 }
