--- a/package.json
+++ b/package.json
@@ -15,11 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.9",
-    "@types/express-jwt": "0.0.42",
-    "@types/mongodb": "^3.6.3",
-    "@types/node": "^12.19.9",
-    "@types/request": "^2.48.5",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -38,5 +33,12 @@
     "typescript": "^3.9.7",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.5"
+  },
+  "devDependencies": {
+    "@types/request": "^2.48.8",
+    "@types/express": "^4.17.9",
+    "@types/express-jwt": "0.0.42",
+    "@types/mongodb": "^3.6.3",
+    "@types/node": "^12.19.9"
   }
 }
