--- a/package.json
+++ b/package.json
@@ -15,30 +15,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
-    "express": "^4.17.1",
-    "express-jwt": "^5.3.3",
+    "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
     "express-jwt-authz": "^2.4.1",
-    "helmet": "^3.23.3",
-    "http-errors": "^1.8.0",
-    "jwks-rsa": "^1.12.0",
+    "helmet": "^5.0.2",
+    "http-errors": "^2.0.0",
+    "jwks-rsa": "^2.0.5",
+    "mongodb": "^4.5.0",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^3.9.7",
-    "winston": "^3.3.3",
-    "winston-mongodb": "^5.0.5"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3",
+    "winston": "^3.7.2",
+    "winston-mongodb": "^5.0.7"
   },
   "devDependencies": {
-    "@types/request": "^2.48.8",
-    "@types/express": "^4.17.9",
-    "@types/express-jwt": "0.0.42",
-    "@types/mongodb": "^3.6.3",
-    "@types/node": "^12.19.9"
+    "@types/express": "^4.17.13",
+    "@types/express-jwt": "^6.0.4",
+    "@types/node": "^14.18.13",
+    "@types/request": "^2.48.8"
   }
 }
